--- a/_docs/upgrading/3-to-4.md
+++ b/_docs/upgrading/3-to-4.md
@@ -212,3 +212,18 @@ desired funtionality, by listing the extension's gem-name in their `Gemfile`. --
   * バージョン管理されたJekyll環境イメージ（Docker Image、GitHub Pagesなど）を提供するベンダーは、Jekyll 4.0のディストリビューションでkramdownの拡張機能のgemを手動でホワイトリストに登録する必要があります。
   <!-- * Vendors that provide a versioned Jekyll Environment Image (e.g. Docker Image, GitHub Pages, etc)
     will have to manually whitelist kramdown's extension gems in their distributions for Jekyll 4.0. -->
+
+## 非推奨の設定オプション
+<!-- ## Deprecated Configuration Options -->
+
+Jekyll 4.0では、以前のシリーズの複数のリリースで廃止された、すべてのレガシー設定オプションのサポートを終了しました。
+
+<!-- Jekyll 4.0 has dropped support for all legacy configuration options that were deprecated over multiple
+releases in the previous series. -->
+
+そのため、レガシー構成キーに遭遇したときに非推奨の警告を出力することも、それらを適切に新しい対応した値に割り当てることもしません。キーはまだ有効であるが、関連付けられた値が有効なタイプでない場合、キーに応じて、無視されるか、 `InvalidConfigurationError`エラーが発生します。
+
+<!-- To that end, we shall no longer output a deprecation warning when we encounter a legacy config key nor
+shall we gracefully assign their values to the newer counterparts. Depending on the key, it shall either
+be ignored or raise an `InvalidConfigurationError` error if the key is still valid but the associated
+value is not of the valid type. -->
