Original(759315b)追従 変数変更

--- a/_docs/upgrading/3-to-4.md
+++ b/_docs/upgrading/3-to-4.md
@@ -11,9 +11,9 @@ Jekyll 4にはいくつかの変更点があります。
 
 <!-- A few things have changed in Jekyll 4. -->
 
-アップグレード前に、最新のRuby {{ site.min_ruby_version }}のインストールが必要です。
+アップグレード前に、最新のRuby {{ site.data.ruby.min_version }}のインストールが必要です。
 
-<!-- Before we dive in, you need to have at least Ruby {{ site.min_ruby_version }}
+<!-- Before we dive in, you need to have at least Ruby {{ site.data.ruby.min_version }}
 installed. -->
 
 ターミナルで次を実行して確認してください。
@@ -22,12 +22,12 @@ installed. -->
 
 ```sh
 ruby -v
-ruby 2.6.2p47 (2019-03-13 revision 67232) [x86_64-darwin18]
+{{ site.data.ruby.current_version_output }}
 ```
 
-サポートされているRubyのバージョン > {{ site.min_ruby_version }}を使用している場合は、先に進みJekyllの最新版を入手してください。
+サポートされているRubyのバージョン > {{ site.data.ruby.min_version }}を使用している場合は、先に進みJekyllの最新版を入手してください。
 
-<!-- If you're using a supported Ruby version > {{ site.min_ruby_version }}, go ahead
+<!-- If you're using a supported Ruby version > {{ site.data.ruby.min_version }}, go ahead
 and fetch the latest version of Jekyll: -->
 
 ```sh
