--- a/_docs/upgrading/3-to-4.md
+++ b/_docs/upgrading/3-to-4.md
@@ -77,6 +77,16 @@ your pages and documents. -->
 <!-- The downside to this is that some of the community-authored plugins may not work
 as they previously used to. -->
 
+## レンダリングされていないコレクションの静的ファイル
+<!-- ## Static files in unrendered collections -->
+
+`posts`以外のコレクションには、マークダウンファイルと共に静的ファイルを含めることができます。しかし、コレクションに`output: true`の設定がされていなければ、*ドキュメント*も*静的ファイル*も出力されません。
+
+<!-- Collections other than `posts` can contain static assets along with Markdown files.
+But if the collection has not been configured with metadata `output: true`, then
+neither its *documents* nor its *static assets* will be output to the destination
+directory. -->
+
 ## プラグイン作成者へ
 <!-- ## For plugin authors -->
 
