--- a/_docs/upgrading/3-to-4.md
+++ b/_docs/upgrading/3-to-4.md
@@ -25,9 +25,9 @@ ruby -v
 {{ site.data.ruby.current_version_output }}
 ```
 
-サポートされているRubyのバージョン > {{ site.data.ruby.min_version }}を使用している場合は、先に進みJekyllの最新版を入手してください。
+サポートされているRubyのバージョン >= {{ site.data.ruby.min_version }}を使用している場合は、先に進みJekyllの最新版を入手してください。
 
-<!-- If you're using a supported Ruby version > {{ site.data.ruby.min_version }}, go ahead
+<!-- If you're using a supported Ruby version >= {{ site.data.ruby.min_version }}, go ahead
 and fetch the latest version of Jekyll: -->
 
 ```sh
