--- a/_docs/upgrading/0-to-2.md
+++ b/_docs/upgrading/0-to-2.md
@@ -153,19 +153,18 @@ file, and if so, make sure that you're using them properly: -->
 
 ### Baseurl
 
-多くの場合、GitHubページにプッシュする前にローカルでプレビューするなど、Jekyllサイトを複数の場所で実行できるようにする必要があります。Jekyll 1.0は新しい`--baseurl`フラグでそれをより簡単にします。この機能を利用するには、まずサイトの`_config.yml`ファイルに`baseurl`構成を追加します。次に、サイト全体で、相対URLの先頭に`{% raw %}{{ site.baseurl }}{% endraw %}`を付けます。サイトをローカルでプレビューする準備ができたら、`--baseurl`フラグをローカルのbaseurl（多くは`/`）と一緒に`jekyll serve`に渡すと、Jekyllは全てを入れ替えるので、両方の環境でリンクがきちんと動くことが期待できます。
+多くの場合、GitHubページにプッシュする前にローカルでプレビューするなど、Jekyllサイトを複数の場所で実行できるようにする必要があります。Jekyll 1.0は新しい`--baseurl`フラグでそれをより簡単にします。この機能を利用するには、まずサイトの`_config.yml`ファイルに`baseurl`構成を追加します。次に、サイト全体で、相対URLの先頭に{% raw %}`{{ site.baseurl }}`{% endraw %}を付けます。サイトをローカルでプレビューする準備ができたら、`--baseurl`フラグをローカルのbaseurl（多くは`/`）と一緒に`jekyll serve`に渡すと、Jekyllは全てを入れ替えるので、両方の環境でリンクがきちんと動くことが期待できます。
 
 <!-- Often, you'll want the ability to run a Jekyll site in multiple places,
 such as previewing locally before pushing to GitHub Pages. Jekyll 1.0 makes
 that easier with the new `--baseurl` flag. To take advantage of this
 feature, first add the production `baseurl` to your site's `_config.yml`
 file. Then, throughout the site, prefix relative URLs
-with `{% raw %}{{ site.baseurl }}{% endraw %}`.
+with {% raw %}`{{ site.baseurl }}`{% endraw %}.
 When you're ready to preview your site locally, pass along the `--baseurl`
 flag with your local baseurl (most likely `/`) to `jekyll serve` and Jekyll
 will swap in whatever you've passed along, ensuring all your links work as
 you'd expect in both environments. -->
-
 
 <div class="note warning">
   <h5 markdown="1">全てのページとポストのURLはスラッシュから始まります。</h5>
