--- a/_docs/upgrading/2-to-3.md
+++ b/_docs/upgrading/2-to-3.md
@@ -20,11 +20,11 @@ that you'll want to know about. -->
 gem update jekyll
 ```
 
-v3.2以降JekyllはRuby version >= 2.1が必要です。
 {: .note .warning }
+{% include docs_version_badge.html version="3.2"%}以降JekyllはRuby version >= 2.1が必要です。
 
-<!-- Since v3.2 Jekyll requires Ruby version >= 2.1
-{: .note .warning } -->
+<!-- {: .note .warning}
+Since version {% include docs_version_badge.html version="3.2"%}, Jekyll requires Ruby version >= 2.1. -->
 
 <div class="note feature">
   <h5>飛び込みましょう</h5>
@@ -59,11 +59,11 @@ Jekyll 2での`site.collections.myCollection`は次のようになります。
 
 <!-- For `site.collections.myCollection` in Jekyll 2, you now do: -->
 
-```liquid
 {% raw %}
+```liquid
 {% assign myCollection = site.collections | where: "label", "myCollection" | first %}
-{% endraw %}
 ```
+{% endraw %}
 
 これは最初は少し面倒ですが、`for`ループよりも簡単です。
 
@@ -126,13 +126,13 @@ generate when running `jekyll build` or `jekyll serve`. -->
 ### レイアウトのmetadata
 <!-- ### Layout metadata -->
 
-`layout`について。 Jekyll 2以前では、レイアウト内のメタデータはすべてLiquidの`page`変数にマージされていました。これにより、データのマージ方法と予期しない動作が混乱することがありました。Jekyll 3では、すべてのレイアウトデータはLiquidの`layout`からアクセスできます。例えば、レイアウトのfront matterに`class: my-layout`がある場合、レイアウトは`{% raw %}{{ layout.class }}{% endraw %}`を介してアクセスできます。
+`layout`について。 Jekyll 2以前では、レイアウト内のメタデータはすべてLiquidの`page`変数にマージされていました。これにより、データのマージ方法と予期しない動作が混乱することがありました。Jekyll 3では、すべてのレイアウトデータはLiquidの`layout`からアクセスできます。例えば、レイアウトのfront matterに`class: my-layout`がある場合、レイアウトは{% raw %}`{{ layout.class }}`{% endraw %}を介してアクセスできます。
 
 <!-- Introducing: `layout`. In Jekyll 2 and below, any metadata in the layout was merged onto
 the `page` variable in Liquid. This caused a lot of confusion in the way the data was
 merged and some unexpected behaviour. In Jekyll 3, all layout data is accessible via `layout`
 in Liquid. For example, if your layout has `class: my-layout` in its front matter,
-then the layout can access that via `{% raw %}{{ layout.class }}{% endraw %}`. -->
+then the layout can access that via {% raw %}`{{ layout.class }}`{% endraw %}. -->
 
 ### シンタックスハイライトの変更
 <!-- ### Syntax highlighter changed -->
@@ -156,7 +156,7 @@ Jekyll 3以降では、相対パーマリンクは非推奨になりました。
 created your site using Jekyll 2 and below, you may receive the following
 error when trying to **serve** or **build**: -->
 
-```text
+```
 Since v3.0, permalinks for pages in subfolders must be relative to the site
 source directory, not the parent directory. Check
 https://jekyllrb.com/docs/upgrading/ for more info.
